# telegram_downloader_rust

./: .env.example  .gitignore  Cargo.toml  Readme.md
.github/workflows/: release.yml
src/: app_config.rs  custom_result.rs  get_bot.rs  main.rs
src/message_handler/: command_handler.rs  default_handler.rs  document_handler.rs  mod.rs  query_handler.rs  url_handler.rs
src/utils/: download_utils.rs  helper.rs  mod.rs
