[package]
name = "telegram_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grammers-client = { git = "https://github.com/Lonami/grammers" }
futures-util = { version = "0.3.15", default-features = false, features = [
    "alloc"
] }
tokio = { version = "1.34.0", features = ["full"] }
simple_logger = { version = "4.2.0", default-features = false, features = [
    "colors",
] }
toml = "0.8.8"
log = "0.4.22"
dotenv = "0.15.0"
local-ip-address = "0.6.1"
fs2 = "0.4.3"
lazy_static = "1.5.0"
system_shutdown = "4.0.1"
tokio-util = "0.7.11"
